WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224756
Silence various -Wreturn-type warnings
https://bugs.webkit.org/show_bug.cgi?id=224756
Summary
Silence various -Wreturn-type warnings
Michael Catanzaro
Reported
2021-04-19 07:11:34 PDT
Add missing RELEASE_ASSERT_NOT_REACHED() to suppress GCC's -Wreturn-type warnings.
Attachments
Patch
(3.51 KB, patch)
2021-04-19 07:12 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2021-04-19 07:12:14 PDT
Created
attachment 426415
[details]
Patch
EWS
Comment 2
2021-04-19 08:18:39 PDT
Committed
r276253
(
236735@main
): <
https://commits.webkit.org/236735@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426415
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-04-24 15:04:56 PDT
<
rdar://problem/77110046
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug