Silence various -Wreturn-type warnings https://bugs.webkit.org/show_bug.cgi?id=224756

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-04-19
Reviewed by Don Olmstead.

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::mixColorComponents):
* inspector/InspectorOverlay.cpp:
(WebCore::expectedSizeForLayoutLabel):
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::usedClear):
(WebCore::RenderStyle::usedFloat):

Canonical link: https://commits.webkit.org/236735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276253 268f45cc-cd09-0410-ab3c-d52691b4dbfc